- TW-1488 You have more urgent tasks (thanks to Stefan Betz, Denis Kasak).
- TW-1511 Project titles not properly parsed if they contain hyphens (thanks to
          Leon Feng, Blake Sweeney, Dylan Mikus).
- TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
- TW-1529 Parser incorrectly inserting spaces into task description (thanks to
          David Brenner).
- TW-1569 update wait:<wait-date> manpage entry (thanks to David Patrick).
- TW-1572 Better urgency inheritance (thanks to Jens Erat).
- TW-1575 `task log` mangles URLs when quoted (thanks to Luke Macken).
- TW-1592 Able to add duplicate tags using 'tags:<value>' (thanks to Tomas
          Babej).
- TW-1600 Filtering "regressions"(?) in task-2.4.3, task-2.4.4 (thanks to Ralph
          Bean).
- TW-1609 In 'urgency<10', 10 is interpreted as an ID (thanks to Wim Schuermann).
- TW-1612 Spurious whitespace added in task descriptions around certain symbols
          (thanks to Denis Kasak).
- TW-1615 Japanese translation for Taskwarrior(150513) (thanks to ribbon).
- TW-1617 Can't search for multi-word project (thanks to Audrey Easterday).
- TW-1619 fish completion contain backspaces in fish master version (thanks to
          Johannes Wienke₎.
- TW-1622 Duration UDA can't take an algebraic expression (thanks to Jeremy John
          Reeder).
- TW-1626 Wrong wait date (thanks to Andrea Rizzi).
- TW-1632 Japanese translation for Taskwarrior(150713) (thanks to ribbon).
- TW-1634 due.not:<date> excludes only tasks scheduled at mitnight (thanks to
          Tomas Babej).
- TW-1635 Running "task anystringatall" does not filter anything (thanks to
          Tomas Babej).
- Prevent potential task duplication during import for non-pending tasks.
- Show the active context in "context list", if any is active.
- Fix "task edit" dropping annotation text after newlines.
- Removed obsolete script 'context'.
- Fix "project" verbosity info not showing without "footnote" being manually
  enabled.