@@ -1,8 +1,5 @@
 cmake_minimum_required (VERSION 2.8)
 set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
-if(POLICY CMP0037)
-  cmake_policy(SET CMP0037 OLD)
-endif()
 
 include (CheckFunctionExists)
 include (CheckStructHasMember)
